# rnnoise

./: CMakeLists.txt
src/: celt_lpc.c  rnn.c
